marked 1.1.6 17 June 2014
-----------------
CHANGES

* Modification to documentation to avoid overflow on pdf

marked 1.1.5 16 June 2014
-----------------
NEW FEATURES

* Real parameters are now created for HMM models with predict.crm; modified compute.real so reduction to unique real parameters occurs before computation of v-c matrix; also certain fields are added (eg occ) so that a full set of real parameters is displayed. That includes showing all parameters in an mlogit set.

* Added tag loss models HMMCJS1TL and HMMCJS2TL

* Added switch (remove.unused.columns) to create.dml and create.dm functions that controls whether unused columns in the design matrix are removed or not. The default is TRUE. 

CHANGES

* marked now depends on lme4 rather than imports; only way that Rscript would work. Also added methods to depends.

* ehmat (encounter history matrix) is now stored with ddl in make.design.data

* Model BayesMSCJS which also contains uncertain state was added to models.txt in anticipation of its inclusion and probitMsCJS was never used and was removed.


marked 1.1.4 10 Jan 2014
-----------------
NEW FEATURES

* Random effects added to probitCJS

BUG FIXES

* patch made to cjs so accumulate set to FALSE with fixed parameter values and bug in create.fixed.matrix for cjs model was patched

CHANGES

* proc.form was modified to use code from lme4 to provide better handling of formula; removing intercept was not fully supported in previous version.

KNOWN PROBLEM

* used of fixed= in parameter specification currently doesn't work; use ddl$fix approach to setting fixed values. Merging described below is not working properly.


marked 1.1.3 22 Nov 2013
-----------------

NEW FEATURES
