@@ -301,10 +301,10 @@ create.dmdf=function(x,parameter,time.varying=NULL,fields=NULL)
    df$Cohort=df$cohort-min(df$cohort)
   # df$Age=df$age-max(0,min(df$age))
    df$age[df$age<0]=0
-   df$time=factor(df$time) 
+   df$time=factor(df$time)
    df$Age=df$age
    df$age=factor(df$age) 
-   df$cohort=factor(df$cohort) 
+   df$cohort=factor(df$cohort)
    if("group"%in%names(df))
 	  levels(df$group)=apply(x$group.covariates,1,paste,collapse="")
    if(!is.null(x$strata_data)&!is.null(df$stratum))
