@@ -53,7 +53,8 @@ set.initial=function(pars,dml,initial)
 				}
 			}
 		}
-		ptype=c(ptype,rep(parx,ncol(dml[[parx]]$fe)))		
+		ptype=c(ptype,rep(parx,ncol(dml[[parx]]$fe)))	
+		names(par[[parx]])=colnames(dml[[parx]]$fe)
 	}
 	return(list(par=par,ptype=ptype))
 }
