@@ -4,6 +4,7 @@
 DATA_SECTION 
     init_int n;                                           // number of capture histories
     init_int m;                                           // number of capture occasions
+	init_int debug;                                       // 0/1 variable 1 = printout iterations
     init_imatrix ch(1,n,1,m);                             // capture history matrix
     init_ivector frst(1,n);                               // occasion first seen for each history
     init_ivector lst(1,n);                                // occasion last seen for each history
@@ -121,7 +122,13 @@ PROCEDURE_SECTION
 			 else 			 
 		  	     ll_i(i,phi_sigma,p_sigma,phi_u(phi_indices),p_u(p_indices),phi_beta,p_beta);  // phi and p random effects		 
     }
-	
+	if(debug==1)
+	{
+	    cout << "Phi = " << phi_beta << endl;
+	    cout << "p = " << p_beta << endl;
+	    cout << "f = " << f << endl;
+    }
+
 
 SEPARABLE_FUNCTION void n01_prior(const prevariable&  u)           // taken from glmmadmb.tpl; uses PI 
     f -= -0.5*log(2.0*M_PI) - 0.5*square(u);
